feat: added custom-entity filters
